add base to the ABCActivity( to spell letters ). Fix to the camera activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-feature android:name="android.hardware.camera" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -43,6 +45,10 @@
         <activity
             android:name=".activities.ScrabbleActivity"
             android:label="@string/title_activity_scrabble" >
+        </activity>
+        <activity
+            android:name=".activities.ABCActivity"
+            android:label="@string/title_activity_abc" >
         </activity>
     </application>
 
