--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,6 @@
         <activity
             android:name=".activities.MenuActivity"
             android:label="@string/title_activity_menu" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".activities.TakePhotoActivity"
@@ -65,6 +60,25 @@
         <activity
             android:name=".activities.SettingsActivity"
             android:label="@string/settings" >
+        </activity>
+        <activity
+            android:name=".activities.InitialLoadingActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.AdminFormActivity"
+            android:label="@string/title_activity_menu"
+            android:theme="@style/AppTheme" >
+        </activity>
+
+        <activity android:name=".activities.LoginActivity" >
+        </activity>
+        <activity android:name=".activities.StudentMenuActivity" >
         </activity>
     </application>
 
