--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,8 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    apt 'com.raizlabs.android:DBFlow-Compiler:2.2.1'
     compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.raizlabs.android:DBFlow-Core:2.2.1'
-    compile 'com.raizlabs.android:DBFlow:2.2.1'
     compile 'com.android.support:design:23.1.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
+    compile 'org.litepal.android:core:1.3.0'
 }
