--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.samuelzvir.meuabc" >
+    package="br.com.ema" >
 
     <uses-feature android:name="android.hardware.camera" />
 
@@ -15,73 +15,73 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activities.CreateTextActivity"
+            android:name="br.com.ema.activities.CreateTextActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_create_text"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".activities.MenuActivity"
+            android:name="br.com.ema.activities.MenuActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_menu"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".activities.TakePhotoActivity"
+            android:name="br.com.ema.activities.TakePhotoActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_take_photo"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".activities.BuildChallengesActivity"
+            android:name="br.com.ema.activities.BuildChallengesActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_build_challenges"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".activities.PlayChallengesActivity"
+            android:name="br.com.ema.activities.PlayChallengesActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_play_challenges"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".activities.ScrabbleActivity"
+            android:name="br.com.ema.activities.ScrabbleActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_scrabble"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".activities.ABCActivity"
+            android:name="br.com.ema.activities.ABCActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_abc"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".activities.ProfilesActivity"
+            android:name="br.com.ema.activities.ProfilesActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_profiles"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".activities.DataAnalysisActivity"
+            android:name="br.com.ema.activities.DataAnalysisActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_data_analysis"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".activities.UserActivity"
+            android:name="br.com.ema.activities.UserActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_user"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".activities.SettingsActivity"
+            android:name="br.com.ema.activities.SettingsActivity"
             android:configChanges="orientation"
             android:label="@string/settings"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".activities.InitialLoadingActivity"
+            android:name="br.com.ema.activities.InitialLoadingActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" >
             <intent-filter>
@@ -91,21 +91,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.AdminFormActivity"
+            android:name="br.com.ema.activities.AdminFormActivity"
             android:label="@string/title_activity_menu"
             android:theme="@style/AppTheme" >
         </activity>
-        <activity android:name=".activities.LoginActivity" >
+        <activity android:name="br.com.ema.activities.LoginActivity" >
         </activity>
         <activity
-            android:name=".activities.StudentMenuActivity"
+            android:name="br.com.ema.activities.StudentMenuActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" >
         </activity>
-        <activity android:name=".activities.StudentGameActivity" >
+        <activity android:name="br.com.ema.activities.StudentGameActivity" >
         </activity>
         <activity
-            android:name=".activities.StatsActivity"
+            android:name="br.com.ema.activities.StatsActivity"
             android:label="@string/title_activity_stats"
             android:theme="@style/AppTheme" >
         </activity>
