--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "23.0.0"
 
     defaultConfig {
-        applicationId "br.com.samuelzvir.meuabc"
+        applicationId "br.com.ema"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
