--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     compile 'org.litepal.android:core:1.3.0'
+    compile 'me.grantland:autofittextview:0.2.+'
 }
