--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,12 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.android.support:design:23.1.0'
+    compile 'com.android.support:appcompat-v7:23.1.+'
+    compile 'com.android.support:design:23.1.+'
+    compile 'com.android.support:support-v4:23.1.+'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     compile 'org.litepal.android:core:1.3.0'
     compile 'me.grantland:autofittextview:0.2.+'
+
 }
+
