--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'realm-android'
+
 
 android {
     compileSdkVersion 23
@@ -29,8 +31,6 @@ dependencies {
     compile 'com.android.support:design:23.1.+'
     compile 'com.android.support:support-v4:23.1.+'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
-    compile 'org.litepal.android:core:1.3.0'
     compile 'me.grantland:autofittextview:0.2.+'
-
 }
 
