Fix audio bug, fix the keyboard keys order, create a new layout for devices with small screens, add new icons to the end user.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.+'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     compile 'me.grantland:autofittextview:0.2.+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
 
