--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "org.ema"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 4
-        versionName "1.3"
+        versionCode 5
+        versionName "5"
     }
     buildTypes {
         release {
@@ -31,7 +31,7 @@ dependencies {
     compile 'com.android.support:design:23.1.+'
     compile 'com.android.support:support-v4:23.1.+'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
-    compile 'me.grantland:autofittextview:0.2.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.github.amlcurran.showcaseview:library:5.4.3'
 }
 
