--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,109 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.ema" >
+    package="org.ema">
 
-    <supports-screens android:smallScreens="true"
-        android:normalScreens="true"
+    <supports-screens
         android:largeScreens="true"
-        android:xlargeScreens="true"
-        android:requiresSmallestWidthDp="240" />
+        android:normalScreens="true"
+        android:requiresSmallestWidthDp="240"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
 
     <uses-feature android:name="android.hardware.camera" />
 
-    <!--<uses-permission android:name="android.permission.INTERNET" />-->
-    <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
+    <!-- <uses-permission android:name="android.permission.INTERNET" /> -->
+    <!-- <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> -->
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo2"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name="org.ema.activities.admin.CreateTextActivity"
+            android:name=".activities.admin.CreateTextActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_create_text"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
-            android:name="org.ema.activities.admin.MenuActivity"
+            android:name=".activities.admin.MenuActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_menu"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
-            android:name="org.ema.activities.operations.TakePhotoActivity"
+            android:name=".activities.operations.TakePhotoActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_take_photo"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
-            android:name="org.ema.activities.admin.WordsManagementActivity"
+            android:name=".activities.admin.WordsManagementActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_build_challenges"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
-            android:name="org.ema.activities.admin.ABCActivity"
+            android:name=".activities.admin.ABCActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_abc"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
-            android:name="org.ema.activities.admin.ProfilesActivity"
+            android:name=".activities.admin.ProfilesActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_profiles"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
-            android:name="org.ema.activities.operations.DataAnalysisActivity"
+            android:name=".activities.operations.DataAnalysisActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_data_analysis"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
-            android:name="org.ema.activities.admin.UserActivity"
+            android:name=".activities.admin.UserActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_user"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
-            android:name="org.ema.activities.admin.SettingsActivity"
+            android:name=".activities.admin.SettingsActivity"
             android:configChanges="orientation"
             android:label="@string/settings"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
-            android:name="org.ema.activities.InitialLoadingActivity"
+            android:name=".activities.InitialLoadingActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="org.ema.activities.admin.AdminFormActivity"
+            android:name=".activities.admin.AdminFormActivity"
             android:label="@string/title_activity_menu"
-            android:theme="@style/AppTheme" >
-        </activity>
-        <activity android:name="org.ema.activities.LoginActivity" >
-        </activity>
+            android:theme="@style/AppTheme"></activity>
+        <activity android:name=".activities.LoginActivity"></activity>
         <activity
-            android:name="org.ema.activities.student.StudentMenuActivity"
+            android:name=".activities.student.StudentMenuActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait" >
-        </activity>
-        <activity android:name="org.ema.activities.student.StudentGameActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait">
-
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
-            android:name="org.ema.activities.operations.StatsActivity"
+            android:name=".activities.student.StudentGameActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activities.operations.StatsActivity"
             android:label="@string/title_activity_stats"
-            android:theme="@style/AppTheme" >
-        </activity>
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
