--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "org.ema"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 5
-        versionName "5"
+        versionCode 6
+        versionName "6"
     }
     buildTypes {
         release {
@@ -27,9 +27,10 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.1.+'
-    compile 'com.android.support:design:23.1.+'
-    compile 'com.android.support:support-v4:23.1.+'
+    compile group: 'com.sun.mail', name: 'android-mail', version: '1.6.0'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:support-v4:23.1.1'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.amlcurran.showcaseview:library:5.4.3'
