--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <uses-feature android:name="android.hardware.camera" />
 
-    <!-- <uses-permission android:name="android.permission.INTERNET" /> -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <!-- <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> -->
     <uses-permission android:name="android.permission.VIBRATE" />
 
@@ -24,47 +24,47 @@
             android:name=".activities.admin.CreateTextActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_create_text"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.admin.MenuActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_menu"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.operations.TakePhotoActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_take_photo"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.admin.WordsManagementActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_build_challenges"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.admin.ABCActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_abc"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.admin.ProfilesActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_profiles"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.operations.DataAnalysisActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_data_analysis"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.admin.UserActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_user"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.admin.SettingsActivity"
             android:configChanges="orientation"
             android:label="@string/settings"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.InitialLoadingActivity"
             android:label="@string/app_name"
@@ -78,19 +78,23 @@
         <activity
             android:name=".activities.admin.AdminFormActivity"
             android:label="@string/title_activity_menu"
-            android:theme="@style/AppTheme"></activity>
-        <activity android:name=".activities.LoginActivity"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".activities.LoginActivity" />
         <activity
             android:name=".activities.student.StudentMenuActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.student.StudentGameActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.operations.StatsActivity"
             android:label="@string/title_activity_stats"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activities.admin.NewAdminPassword"
+            android:label="@string/title_activity_new_admin_password"
             android:theme="@style/AppTheme"></activity>
     </application>
 
