--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
     repositories {
+        google()
         jcenter()
-
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
-        classpath "io.realm:realm-gradle-plugin:3.3.1"
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'io.realm:realm-gradle-plugin:4.0.0'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,9 +17,11 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
     }
-    dependencies {
-        'com.neenbedankt.gradle.plugins:android-apt:1.4'
-    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
