--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: android
 jdk: oraclejdk8
 env:
  global:
-    - ANDROID_API_LEVEL=25
+    - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=25.0.2
 android:
  licenses:
@@ -24,6 +24,8 @@ android:
 before_script:
     # Prepare pre-accepted licenses to not be promted at installation
     - mkdir -p "$ANDROID_HOME/licenses"
-    - cp ./licenses/* "$ANDROID_HOME/licenses/"
+    - echo '' >> "$ANDROID_HOME/licenses/android-sdk-license"
+    - echo $LICENSE_1 >> "$ANDROID_HOME/licenses/android-sdk-license"
+    - echo $LICENSE_2 >> "$ANDROID_HOME/licenses/android-sdk-license"
 script:
     - ./gradlew build check
